# slack-zc

./: .gitignore  AGENT.md  Cargo.toml  Makefile  README.md  test_channels.sh
.github/workflows/: security.yml
.planning/: PROJECT.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-agent-command-ux/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/02-reliability/: 02-04-SUMMARY.md
config/: default.toml
crates/agent/: Cargo.toml
crates/agent/src/: commands.rs  gateway.rs  lib.rs  runner.rs
crates/slack/: Cargo.toml
crates/slack/src/: api.rs  auth.rs  error.rs  lib.rs  socket.rs  types.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  cache.rs  config.rs  input.rs  keybinds.rs  lib.rs  main.rs
crates/tui/src/app/: actions.rs  effects.rs  input.rs  mod.rs  render.rs  state.rs  types.rs
crates/tui/src/onboarding/: mod.rs  oauth_flow.rs  slack_setup.rs  zc_setup.rs
crates/tui/src/ui/: layout.rs  mod.rs  panel.rs
docs/: 01_phase1_tasks.md  02_phase2_tasks.md  03_phase3_tasks.md  04_phase4_tasks.md  05_production_security_tasks.md  PR
