[workspace]
members = ["crates/tui", "crates/slack", "crates/agent"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
anyhow = "1"
regex = "1"
tokio-tungstenite = "0.26"
aes-gcm = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"
toml = "0.8"
tokio-util = "0.7"
oauth2 = "4"
url = "2"
thiserror = "1"
